# laboratory3_QT_CMAKE

./: CMakeLists.txt
Tests/Test/: Likhomanov T.D.docx
Tests/Test/Test2/: Course work.docx
include/: AbstractStrategy.h  ChartWidget.h  Configuration.h  ConfigurationTest.h  Data.h  Explorer.h  FileBrowserModel.h  FolderGrouping.h  FolderGroupingTest.h  StrategyManagement.h  TypeGrouping.h  TypeGroupingTest.h
src/: ChartWidget.cpp  ConfigurationTest.cpp  Explorer.cpp  FileBrowserModel.cpp  FolderGrouping.cpp  FolderGroupingTest.cpp  StrategyManagement.cpp  TypeGrouping.cpp  TypeGroupingTest.cpp  main.cpp
ui/: Explorer.ui
